agrega busqueda por consecutivo

--- a/src/app/cliente/cliente.component.html
+++ b/src/app/cliente/cliente.component.html
@@ -10,8 +10,8 @@
         </svg>
       </span>
     </div>
-    <input type="text" class="form-control" placeholder="Buscar Consecutivo..." [ngModel]="filtro" (keyup) ='buscarRegistro()'>
-    {{filtro}}
+    <input type="text" class="form-control" placeholder="Buscar Consecutivo..." [(ngModel)]="filtro" (keyup) ='buscarRegistro()'>
+    
   </div>
 </div>
 <br><br>
